WebKit doesn't automatically right-align Adlam https://bugs.webkit.org/show_bug.cgi?id=220885

Reviewed by Alex Christensen.

Source/WTF:

If we want to iterate across code points, we have to actually
iterate across code points instead of iterating across code units.

Test: fast/text/adlam-dir-auto.html

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::defaultWritingDirection):

LayoutTests:

* fast/text/adlam-dir-auto-expected.html: Added.
* fast/text/adlam-dir-auto.html: Added.


Canonical link: https://commits.webkit.org/233499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272084 268f45cc-cd09-0410-ab3c-d52691b4dbfc